--- a/primus/configs/modules/megatron/trainer_base.yaml
+++ b/primus/configs/modules/megatron/trainer_base.yaml
@@ -355,3 +355,6 @@ indexer_batch_size: 128
 indexer_log_interval: 1000
 
 parallel_output: false
+
+enable_ft_package: false
+calc_ft_timeouts: false
