--- a/primus/configs/models/megatron/llama_base.yaml
+++ b/primus/configs/models/megatron/llama_base.yaml
@@ -1,15 +1,18 @@
 bases:
   - language_model.yaml
 
-use_legacy_models: False
+group_query_attention: false
+num_query_groups: null
+
 swiglu: true
 add_bias_linear: false
-add_position_embedding: false
-use_rotary_position_embeddings: true
-masked_softmax_fusion: false
 attention_softmax_in_fp32: true
 untie_embeddings_and_output_weights: true
 hidden_dropout: 0.0
 attention_dropout: 0.0
+
+position_embedding_type: rope
+rotary_base: 10000
+rotary_scaling_factor: 40
 
 normalization: RMSNorm
