--- a/primus/configs/models/megatron/language_model.yaml
+++ b/primus/configs/models/megatron/language_model.yaml
@@ -129,6 +129,7 @@ moe_layer_recompute: False
 moe_extended_tp: False
 moe_use_upcycling: false
 moe_permute_fusion: fasle
+moe_router_force_load_balancing: false
 
 # Model parallelism
 model_parallel_size: null
