--- a/primus/configs/modules/megatron/trainer_base.yaml
+++ b/primus/configs/modules/megatron/trainer_base.yaml
@@ -325,10 +325,24 @@ log_straggler: false
 disable_straggler_on_startup: false
 straggler_ctrlr_port: 65535
 straggler_minmax_count: 1
+# inference
 inference_batch_times_seqlen_threshold: -1
+inference_dynamic_batching: false
+inference_dynamic_batching_buffer_size_gb: 40.0 # float
+inference_dynamic_batching_buffer_guaranteed_fraction: 0.2 # float   
+inference_dynamic_batching_buffer_overflow_factor: null # float
+inference_dynamic_batching_max_requests_override: null # int
+inference_dynamic_batching_max_tokens_override: null # int
 max_tokens_to_oom: 12000
 output_bert_embeddings: false
-bert_embedder_type: megatron
+bert_embedder_type: megatron # "megatron", "huggingface"
+flash_decode: false
+enable_cuda_graph: false
+cuda_graph_warmup_steps: 3 # int
+external_cuda_graph: false
+cuda_graph_scope: full # full, attn
+inference_max_requests: 8 # int
+inference_max_seq_length: 2560 # int, (prefill + decode)
 
 create_attention_mask_in_dataloader: true
 num_dataset_builder_threads: 1
@@ -354,3 +368,4 @@ parallel_output: false
 enable_ft_package: false
 calc_ft_timeouts: false
 run_workload_inspector_server: false
+is_hybrid_model: false
