--- a/primus/configs/models/megatron/deepseek_v3_393B.yaml
+++ b/primus/configs/models/megatron/deepseek_v3_393B.yaml
@@ -20,7 +20,7 @@ qk_pos_emb_head_dim: 0
 v_head_dim: 128
 kv_channels: 128
 # moe
-moe_layer_freq: 2
+moe_layer_freq: "([0]*2+[1]*62)"
 num_experts: 256
 moe_router_topk: 8
 # num_shared_experts: 1
