feat: add LLaMA2 7B & 70B model configuration files

--- a/primus/configs/models/megatron/deepseek_v2_lite.yaml
+++ b/primus/configs/models/megatron/deepseek_v2_lite.yaml
@@ -4,8 +4,7 @@ bases:
 # https://huggingface.co/deepseek-ai/DeepSeek-V2-Lite
 # 16B total params, 2.4B active params
 
-tokenizer_type: null
-extra_tokenizer_type: DeepSeekV2Tokenizer
+tokenizer_type: DeepSeekV2Tokenizer
 tokenizer_model: deepseek-ai/DeepSeek-V2-Lite
 
 # model
