--- a/primus/configs/models/megatron/deepseek_v3.yaml
+++ b/primus/configs/models/megatron/deepseek_v3.yaml
@@ -4,8 +4,7 @@ bases:
 # https://huggingface.co/deepseek-ai/DeepSeek-V3
 # 671B total params, 37B active params
 
-tokenizer_type: null
-extra_tokenizer_type: DeepSeekV3Tokenizer
+tokenizer_type: DeepSeekV3Tokenizer
 tokenizer_model: deepseek-ai/DeepSeek-V3
 
 # model
