--- a/examples/megatron/exp_pretrain.yaml
+++ b/examples/megatron/exp_pretrain.yaml
@@ -61,7 +61,7 @@ modules:
       # parallel
       tensor_model_parallel_size: 1
       pipeline_model_parallel_size: 1
-      expert_model_parallel_size: 8
+      # expert_model_parallel_size: 8
       overlap_grad_reduce: true
       overlap_param_gather: true
 
