--- a/examples/megatron/exp_pretrain.yaml
+++ b/examples/megatron/exp_pretrain.yaml
@@ -30,9 +30,9 @@ modules:
       # ddp_bucket_size: 629145600
 
       # recompute
-      # recompute_granularity: full # full, selective
-      # recompute_method: block # uniform, block
-      # recompute_num_layers: 1 # int
+      recompute_granularity: full # full, selective
+      recompute_method: block # uniform, block
+      recompute_num_layers: 12 # int
 
       # profile
       # profile: true
@@ -41,11 +41,10 @@ modules:
       # profile_step_start: 6
 
       # hyber parameters
-      train_iters: 3
-      micro_batch_size: 1
-      global_batch_size: 64
-      seq_length: 4096
-      max_position_embeddings: 4096
+      train_iters: 20
+      micro_batch_size: 6
+      global_batch_size: 384
+      # context_parallel_size: 2
       lr: 1.0e-5
       min_lr: 0.0
       lr_warmup_iters: 2
@@ -59,8 +58,9 @@ modules:
       norm_epsilon: 1.0e-6
 
       # parallel
-      tensor_model_parallel_size: 1
-      pipeline_model_parallel_size: 1
+      # tensor_model_parallel_size: 1
+      # pipeline_model_parallel_size: 1
+      seq_length: 4096
       # expert_model_parallel_size: 8
       overlap_grad_reduce: true
       overlap_param_gather: true
@@ -77,8 +77,6 @@ modules:
       gradient_accumulation_fusion: false
       # 20250317: TE grouped gemm has numerical issue
       moe_use_legacy_grouped_gemm: true
-      # 20250421: need latest megatron docker image
-      apply_rope_fusion: false
 
       # ckpt
       finetune: false
@@ -92,3 +90,16 @@ modules:
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
+
+      # use_torch_fsdp2: true
+      # use_distributed_optimizer: false
+      # overlap_param_gather: false
+      # ckpt_format: torch_dist
+      # deprecated_use_mcore_models: true
+      # sequence_parallel: 1
+
+      async_tensor_model_parallel_allreduce: false
+      attention_softmax_in_fp32: false
+
+
+      # override_opt_param_scheduler: false
