--- a/examples/megatron/exp_pretrain.yaml
+++ b/examples/megatron/exp_pretrain.yaml
@@ -30,9 +30,9 @@ modules:
       # ddp_bucket_size: 629145600
 
       # recompute
-      recompute_granularity: full # full, selective
-      recompute_method: block # uniform, block
-      recompute_num_layers: 12 # int
+      # recompute_granularity: full # full, selective
+      # recompute_method: block # uniform, block
+      # recompute_num_layers: 1 # int
 
       # profile
       # profile: true
@@ -41,10 +41,10 @@ modules:
       # profile_step_start: 6
 
       # hyber parameters
-      train_iters: 20
-      micro_batch_size: 6
-      global_batch_size: 384
-      # context_parallel_size: 2
+      train_iters: 3
+      micro_batch_size: 1
+      global_batch_size: 64
+      seq_length: ${PRIMUS_SEQ_LENGTH:4096}
       lr: 1.0e-5
       min_lr: 0.0
       lr_warmup_iters: 2
@@ -58,10 +58,9 @@ modules:
       norm_epsilon: 1.0e-6
 
       # parallel
-      # tensor_model_parallel_size: 1
-      # pipeline_model_parallel_size: 1
-      seq_length: 4096
-      # expert_model_parallel_size: 8
+      tensor_model_parallel_size: ${PRIMUS_TP:1}
+      pipeline_model_parallel_size: ${PRIMUS_PP:1}
+      expert_model_parallel_size: ${PRIMUS_EP:1}
       overlap_grad_reduce: true
       overlap_param_gather: true
 
@@ -74,7 +73,7 @@ modules:
       # 20250321: need latest megatron docker image
       moe_permute_fusion: false
       # 20250317: need latest apex in docker image
-      gradient_accumulation_fusion: false
+      gradient_accumulation_fusion: true
       # 20250317: TE grouped gemm has numerical issue
       moe_use_legacy_grouped_gemm: true
 
@@ -90,16 +89,3 @@ modules:
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
-
-      # use_torch_fsdp2: true
-      # use_distributed_optimizer: false
-      # overlap_param_gather: false
-      # ckpt_format: torch_dist
-      # deprecated_use_mcore_models: true
-      # sequence_parallel: 1
-
-      async_tensor_model_parallel_allreduce: false
-      attention_softmax_in_fp32: false
-
-
-      # override_opt_param_scheduler: false
