--- a/examples/megatron/exp_pretrain.yaml
+++ b/examples/megatron/exp_pretrain.yaml
@@ -45,6 +45,7 @@ modules:
       micro_batch_size: 1
       global_batch_size: 64
       seq_length: ${PRIMUS_SEQ_LENGTH:4096}
+      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
       lr: 1.0e-5
       min_lr: 0.0
       lr_warmup_iters: 2
@@ -73,7 +74,7 @@ modules:
       # 20250321: need latest megatron docker image
       moe_permute_fusion: false
       # 20250317: need latest apex in docker image
-      gradient_accumulation_fusion: true
+      gradient_accumulation_fusion: false
       # 20250317: TE grouped gemm has numerical issue
       moe_use_legacy_grouped_gemm: true
 
