--- a/examples/megatron/exp_pretrain.yaml
+++ b/examples/megatron/exp_pretrain.yaml
@@ -14,7 +14,7 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: ${MODEL_CONFIG}.yaml
+    model: ${PRIMUS_MODEL}.yaml
     overrides:
       # log
       wandb_project: "Primus_DeepSeek_Pretrain"
