test: rename MODEL_CONFIG env var to PRIMUS_MODEL in test and example configs for consistency

--- a/examples/megatron/exp_pretrain.yaml
+++ b/examples/megatron/exp_pretrain.yaml
@@ -14,7 +14,7 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: ${PRIMUS_MODEL}.yaml
+    model: ${PRIMUS_MODEL:llama2_7B}.yaml
     overrides:
       # log
       wandb_project: "Primus_DeepSeek_Pretrain"
