fix(megatron): unify env var usage and cleanup config references
- Replaced MODEL_CONFIG with PRIMUS_MODEL in llama2_70B-pretrain.yaml
- Removed commented/unused wandb/tensorboard overrides
- Improved error messaging and indentation in run_local_pretrain.sh
- Exported MASTER_ADDR, MASTER_PORT, NNODES, NODE_RANK, and GPUS_PER_NODE in run_pretrain.sh
  to ensure correct environment propagation

--- a/examples/megatron/configs/llama2_70B-pretrain.yaml
+++ b/examples/megatron/configs/llama2_70B-pretrain.yaml
@@ -12,12 +12,10 @@ modules:
   pre_trainer:
     framework: megatron
     config: pre_trainer.yaml
-    model: ${MODEL_CONFIG}.yaml
+    model: ${PRIMUS_MODEL}.yaml
     overrides:
       # log
       wandb_project: "Primus_DeepSeek_Pretrain"
-      # disable_wandb: false
-      # disable_tensorboard: false
       stderr_sink_level: DEBUG
 
       moe_router_force_load_balancing: true
