--- a/examples/megatron/configs/llama3_70B-pretrain.yaml
+++ b/examples/megatron/configs/llama3_70B-pretrain.yaml
@@ -27,8 +27,8 @@ modules:
       micro_batch_size: ${PRIMUS_MBS:6}
       global_batch_size: ${PRIMUS_GBS:384}
 
-      seq_length: 4096
-      max_position_embeddings: 4096
+      seq_length: ${PRIMUS_SEQ_LENGTH:8192}
+      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:8192}
 
       lr: 1.0e-5
       min_lr: 0.0
