config(megatron): add no_fp8_weight_transpose_cache option to trainer_base config

--- a/primus/configs/modules/megatron/trainer_base.yaml
+++ b/primus/configs/modules/megatron/trainer_base.yaml
@@ -61,6 +61,7 @@ fp8_wgrad: true
 fp8_param_gather: false
 te_rng_tracker: false
 inference_rng_tracker: false
+no_fp8_weight_transpose_cache: false
 
 # Optimizer
 optimizer: adam
