--- a/examples/megatron/configs/llama3_70B-pretrain.yaml
+++ b/examples/megatron/configs/llama3_70B-pretrain.yaml
@@ -24,8 +24,8 @@ modules:
       log_avg_reset_interval: 5
 
       train_iters: ${PRIMUS_TRAIN_ITERS:20}
-      micro_batch_size: ${PRIMUS_MBS:6}
-      global_batch_size: ${PRIMUS_GBS:384}
+      micro_batch_size: ${PRIMUS_MBS:4}
+      global_batch_size: ${PRIMUS_GBS:128}
 
       seq_length: ${PRIMUS_SEQ_LENGTH:8192}
       max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:8192}
@@ -49,6 +49,7 @@ modules:
       overlap_grad_reduce: true
 
       # data
+      mock_data: true
       train_data_path: null
       valid_data_path: null
       test_data_path: null
@@ -70,9 +71,29 @@ modules:
       overlap_param_gather: false
       ckpt_format: torch_dist
       sequence_parallel: 1
-      #deprecated_use_mcore_models: true
+      gradient_accumulation_fusion: false
+      # deprecated_use_mcore_models: true
 
+      # use_custom_fsdp: true
+      # use_distributed_optimizer: true
+      # overlap_param_gather: true 
+      # gradient_accumulation_fusion: true 
+      
       # recompute
       recompute_granularity: full # full, selective
       recompute_method: block # uniform, block
-      recompute_num_layers: 12 # int
+      recompute_num_layers: 80 # int
+
+      transformer_impl: transformer_engine
+      fp8: hybrid
+      fp8_margin: 0
+      fp8_interval: 1
+      fp8_amax_history_len: 1024
+      fp8_amax_compute_algo: max
+      attention_softmax_in_fp32: true
+
+      no_fp8_weight_transpose_cache: true
+
+      # use_precision_aware_optimizer: true
+      # fp8_param_gather: true 
+
