--- a/examples/megatron/configs/llama2_7B-pretrain.yaml
+++ b/examples/megatron/configs/llama2_7B-pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${TEAM:amd}
 user_name: ${USER:root}
-exp_name: &exp_name ${EXP_NAME:exp_pretrain}
+exp_name: &exp_name ${EXP_NAME:exp-llama2_7B-pretrain}
 workspace: ./output
 
 platform:
@@ -14,7 +14,7 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: ${PRIMUS_MODEL:llama2_7B}.yaml
+    model: llama2_7B.yaml
     overrides:
       # log
       wandb_project: "Primus_DeepSeek_Pretrain"
@@ -22,32 +22,16 @@ modules:
       # disable_tensorboard: false
       stderr_sink_level: DEBUG
 
-      # debug
-      # num_layers: 5
-      # optimizer: adam
-      moe_router_force_load_balancing: true
-      moe_router_dtype: fp32
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 5
-      # ddp_bucket_size: 629145600
 
-      # recompute
-      # recompute_granularity: full # full, selective
-      # recompute_method: block # uniform, block
-      # recompute_num_layers: 1 # int
+      train_iters: ${PRIMUS_TRAIN_ITERS:20}
+      micro_batch_size: ${PRIMUS_MBS:6}
+      global_batch_size: ${PRIMUS_GBS:384}
 
-      # profile
-      # profile: true
-      # use_pytorch_profiler: true
-      # profile_step_end: 7
-      # profile_step_start: 6
+      seq_length: 4096
+      max_position_embeddings: 4096
 
-      # hyber parameters
-      train_iters: 3
-      micro_batch_size: 6
-      global_batch_size: 768
-      seq_length: ${PRIMUS_SEQ_LENGTH:4096}
-      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
       lr: 1.0e-5
       min_lr: 0.0
       lr_warmup_iters: 2
@@ -61,9 +45,9 @@ modules:
       norm_epsilon: 1.0e-6
 
       # parallel
-      tensor_model_parallel_size: ${PRIMUS_TP:1}
-      pipeline_model_parallel_size: ${PRIMUS_PP:1}
-      expert_model_parallel_size: ${PRIMUS_EP:1}
+      tensor_model_parallel_size: 1
+      pipeline_model_parallel_size: 1
+      expert_model_parallel_size: 1
       overlap_grad_reduce: true
       overlap_param_gather: true
 
@@ -71,14 +55,6 @@ modules:
       train_data_path: ${TOKENIZED_DATA_PATH:null}
       valid_data_path: null
       test_data_path: null
-
-      # fusion
-      # 20250321: need latest megatron docker image
-      moe_permute_fusion: false
-      # 20250317: need latest apex in docker image
-      gradient_accumulation_fusion: false
-      # 20250317: TE grouped gemm has numerical issue
-      moe_use_legacy_grouped_gemm: true
 
       # ckpt
       finetune: false
@@ -92,3 +68,9 @@ modules:
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
+
+      # use_torch_fsdp2: true
+      # use_distributed_optimizer: false
+      # overlap_param_gather: false
+      # ckpt_format: torch
+      # sequence_parallel: 1
