--- a/examples/megatron/configs/llama3.1_70B-pretrain.yaml
+++ b/examples/megatron/configs/llama3.1_70B-pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${TEAM:amd}
 user_name: ${USER:root}
-exp_name: &exp_name ${EXP:exp-deepseek-pretrain}
+exp_name: exp-llama3_70B-pretrain
 workspace: ./output
 
 platform:
@@ -12,29 +12,24 @@ modules:
   pre_trainer:
     framework: megatron
     config: pre_trainer.yaml
-    model: ${PRIMUS_MODEL:deepseek_v2_lite}.yaml
+    model: llama3.1_70B.yaml
     overrides:
       # log
-      wandb_project: "Primus_test_Pretrain"
-      disable_wandb: true
+      wandb_project: "Primus_DeepSeek_Pretrain"
       stderr_sink_level: DEBUG
 
-      # debug
-      num_layers: 4
-      moe_layer_freq: "[0]*1+[1]*3"
-
-      # optimizer: adam
       moe_router_force_load_balancing: true
       moe_router_dtype: fp32
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 5
 
-      # hyber parameters
-      train_iters: 3
-      micro_batch_size: 1
-      global_batch_size: 8
-      seq_length: 4096
-      max_position_embeddings: 4096
+      train_iters: ${PRIMUS_TRAIN_ITERS:20}
+      micro_batch_size: ${PRIMUS_MBS:1}
+      global_batch_size: ${PRIMUS_GBS:512}
+
+      seq_length: ${PRIMUS_SEQ_LENGTH:8192}
+      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:8192}
+
       lr: 1.0e-5
       min_lr: 0.0
       lr_warmup_iters: 2
@@ -48,24 +43,15 @@ modules:
       norm_epsilon: 1.0e-6
 
       # parallel
-      tensor_model_parallel_size: ${PRIMUS_TP:1}
-      pipeline_model_parallel_size: ${PRIMUS_PP:1}
-      expert_model_parallel_size: ${PRIMUS_EP:1}
+      tensor_model_parallel_size: 1
+      pipeline_model_parallel_size: 1
+      expert_model_parallel_size: 1
       overlap_grad_reduce: true
-      overlap_param_gather: true
 
       # data
-      train_data_path: ${TOKENIZED_DATA_PATH:null}
+      train_data_path: null
       valid_data_path: null
       test_data_path: null
-
-      # fusion
-      # 20250321: need latest megatron docker image
-      moe_permute_fusion: false
-      # 20250317: need latest apex in docker image
-      gradient_accumulation_fusion: false
-      # 20250317: TE grouped gemm has numerical issue
-      moe_use_legacy_grouped_gemm: true
 
       # ckpt
       finetune: false
@@ -78,4 +64,15 @@ modules:
       no_save_optim: null
       no_save_rng: null
       disable_last_saving: true
-      ckpt_format: torch
+
+      use_torch_fsdp2: true
+      use_distributed_optimizer: false
+      overlap_param_gather: false
+      ckpt_format: torch_dist
+      sequence_parallel: 1
+      #deprecated_use_mcore_models: true
+
+      # recompute
+      recompute_granularity: full # full, selective
+      recompute_method: block # uniform, block
+      recompute_num_layers: 12 # int
