fix: specify explicit model config in llama2_70B-pretrain.yaml for clarity

--- a/examples/megatron/configs/llama2_70B-pretrain.yaml
+++ b/examples/megatron/configs/llama2_70B-pretrain.yaml
@@ -12,7 +12,7 @@ modules:
   pre_trainer:
     framework: megatron
     config: pre_trainer.yaml
-    model: ${PRIMUS_MODEL}.yaml
+    model: llama2_70B.yaml
     overrides:
       # log
       wandb_project: "Primus_DeepSeek_Pretrain"
