--- a/tests/trainer/test_megatron_trainer.yaml
+++ b/tests/trainer/test_megatron_trainer.yaml
@@ -20,8 +20,8 @@ modules:
       stderr_sink_level: DEBUG
 
       # debug
-      num_layers: 4
-      moe_layer_freq: "[0]*1+[1]*3"
+      num_layers: ${PRIMUS_NUM_LAYERS:4}
+      moe_layer_freq: ${PRIMUS_MOE_LAYER_FREQ:"[0]*1+[1]*3"}
 
       # optimizer: adam
       moe_router_force_load_balancing: true
@@ -32,7 +32,7 @@ modules:
       # hyber parameters
       train_iters: 3
       micro_batch_size: 1
-      global_batch_size: 8
+      global_batch_size: ${PRIMUS_GLOBAL_BATCH_SIZE:8}
       seq_length: 4096
       max_position_embeddings: 4096
       lr: 1.0e-5
