--- a/examples/megatron/configs/llama3.1_70B-pretrain.yaml
+++ b/examples/megatron/configs/llama3.1_70B-pretrain.yaml
@@ -49,7 +49,7 @@ modules:
       overlap_grad_reduce: true
 
       # data
-      train_data_path: null
+      train_data_path: ${TOKENIZED_DATA_PATH:null}
       valid_data_path: null
       test_data_path: null
 
@@ -70,6 +70,7 @@ modules:
       overlap_param_gather: false
       ckpt_format: torch_dist
       sequence_parallel: 1
+      gradient_accumulation_fusion: false
       #deprecated_use_mcore_models: true
 
       # recompute
