feature(torchtitan): Add torchtitan as a Git submodule under third_party

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = third_party/Megatron-LM
 	url = https://github.com/NVIDIA/Megatron-LM.git
 	branch = main
+[submodule "third_party/torchtitan"]
+	path = third_party/torchtitan
+	url = https://github.com/pytorch/torchtitan.git
