enable manually split layers in (interleaved) 1f1b pp by monkey patching

--- a/primus/configs/models/megatron/language_model.yaml
+++ b/primus/configs/models/megatron/language_model.yaml
@@ -148,6 +148,7 @@ encoder_pipeline_model_parallel_size: 0
 pipeline_model_parallel_split_rank: null
 decoder_first_pipeline_num_layers: null # int
 decoder_last_pipeline_num_layers: null # int
+decoder_pipeline_manual_split_list: null # int list
 num_layers_per_virtual_pipeline_stage: null # int
 num_virtual_stages_per_pipeline_rank: null # int
 microbatch_group_size_per_vp_stage: null # int
