fix(config): disable auto_continue_train in LLaMA pretrain configs

--- a/examples/megatron/configs/mixtral_8x22B_v0.1-pretrain.yaml
+++ b/examples/megatron/configs/mixtral_8x22B_v0.1-pretrain.yaml
@@ -67,7 +67,7 @@ modules:
 
       # ckpt
       finetune: false
-      auto_continue_train: true
+      auto_continue_train: false
       load: null
       no_load_optim: null
       no_load_rng: null
