--- a/examples/megatron/configs/llama2_70B-pretrain.yaml
+++ b/examples/megatron/configs/llama2_70B-pretrain.yaml
@@ -55,7 +55,7 @@ modules:
 
       # ckpt
       finetune: false
-      auto_continue_train: true
+      auto_continue_train: false
       load: null
       no_load_optim: null
       no_load_rng: null
